# logify

./: main.py  pyproject.toml
website/: __init__.py  auth.py  models.py  views.py
website/static/: animation.js
website/templates/: 404.html  add_users.html  admin_home.html  approve.html  base.html  confirm.html  forgot.html  login.html  notifications.html  portfolio.html  student_home.html  student_logs.html  suggest.html  teacher_home.html  upload_users.html  verify.html  view_users.html
